--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
+*, *::after, *::before{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --primary-clr: hsl(125, 100%, 23%);
+  --light-clr: hsl(125, 39%, 45%);
+}
+
+a{
+  text-decoration: none;
+  color: unset;
 }
